tests/errors/test_81.xpp
// Can only delete certain expressions

fn main() void {
	let x = 21;
	delete x;
	delete 'a';
}
